// Protocol buffer definitions for linear models.
//
// As elsewhere in the library, for multinomial models the outer key is a
// feature and the inner key is a label. So, e.g., the message called
// SparseDenseMultinomialPerceptron has sparse features and dense labels.

syntax = "proto2";

package perceptronix;

// Binomial models.

// Dense in features (rare).
message DenseBinomialPerceptronProto {
  optional string metadata = 1 [default = ""];
  required float bias = 2;
  repeated float table = 3;
}

// Sparse in features (common).
message SparseBinomialPerceptronProto {
  optional string metadata = 1 [default = ""];
  required float bias = 2;
  map<string, float> table = 3;
}

// Multinomial models.

message DenseInnerTableProto {
  repeated float table = 1;
}

message SparseInnerTableProto {
  map<string, float> table = 1;
}

// Dense in both features and labels (rare).
message DenseMultinomialPerceptronProto {
  optional string metadata = 1 [default = ""];
  required uint32 inner_size = 2;
  required DenseInnerTableProto bias = 3;
  repeated DenseInnerTableProto table = 4;
}

// Sparse in features, dense in labels (very common).

message SparseDenseMultinomialPerceptronProto {
  optional string metadata = 1 [default = ""];
  required uint32 inner_size = 2;
  required DenseInnerTableProto bias = 3;
  map<string, DenseInnerTableProto> table = 4;
}

// Sparse in both features and labels (common).
message SparseMultinomialPerceptronProto {
  optional string metadata = 1 [default = ""];
  required uint32 inner_size = 2;
  required SparseInnerTableProto bias = 3;
  map<string, SparseInnerTableProto> table = 4;
}
